--- a/src/Infrastructure/ProniaOnion.Persistence/ProniaOnion.Persistence.csproj
+++ b/src/Infrastructure/ProniaOnion.Persistence/ProniaOnion.Persistence.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.25" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\ProniaOnion.Application\ProniaOnion.Application.csproj" />
+  </ItemGroup>
+
 </Project>
